--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.0.0-beta.2", features = [ "wrap_help" ] }
+clap = { version = "4.1.2", features = ["wrap_help", "derive", "cargo"] }
+clap_complete = "4.1.1"
 flexi_logger = "0.16"
 fork = "0.1"
 futures-util = "0.3.6"
